kubernetes_configs/ggce-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ggce-api
  namespace: ggce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ggce-api
  template:
    metadata:
      labels:
        app: ggce-api
    spec:
      containers:
      - name: ggce-api
        image: dockerhub.croptrust.org/grin-global/grin-global-server:2024.3
        ports:
        - containerPort: 8080
      - name: cloud-sql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.19.1
        command:
        - /cloud_sql_proxy
        - -instances=accessible-ggce:us-central1:ggce-sql-instance=tcp:1433
        - -credential_file=/secrets/cloudsql/key.json
        volumeMounts:
        - name: cloudsql-instance-credentials
          mountPath: /secrets/cloudsql
          readOnly: true
      volumes:
      - name: cloudsql-instance-credentials
        secret:
          secretName: cloudsql-instance-credentials
