kubernetes_configs/ggce-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ggce-ui
  namespace: ggce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ggce-ui
  template:
    metadata:
      labels:
        app: ggce-ui
    spec:
      containers:
      - name: ggce-ui
        image: dockerhub.croptrust.org/grin-global/grin-global-ui/gg-ce-web:2024.3
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: gcr-json-key
