kubernetes_configs/ggce-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ggce-api
  namespace: ggce
spec:
  selector:
    app: ggce-api
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
