kubernetes_configs/ggce-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ggce-ui
  namespace: ggce
spec:
  selector:
    app: ggce-ui
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
