kubernetes_configs/reverse-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reverse-proxy
  namespace: ggce
  annotations:
    cloud.google.com/load-balancer-type: "external"
spec:
  type: LoadBalancer
  selector:
    app: reverse-proxy
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
  - protocol: TCP
    port: 443
    targetPort: 443
    name: https
